# munich-ai-hackathon

./: .aikido.yml  .env.example  .gitignore  ARCHITECTURE.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-lint.yml  ci-tests.yml  docker-build.yml  jules_automerge.yml  jules_next_task.yml
.gsd/: CODEBASE.md  CONTEXT.md  DECISIONS.md  KNOWLEDGE.md  PREFERENCES.md  PROJECT.md  QUEUE.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  last-snapshot.md
backend/: .dockerignore  Dockerfile  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
backend/agents/: delivery.py  discovery.py  followup.py  orchestrator.py  outreach.py  research.py
backend/api/: companies.py  dossier.py  log.py  profile.py  run.py
backend/eval/: evaluator.py  finetune.py  generator.py  metrics.py  persist.py
backend/schemas/: dossier.py  evidence.py
backend/scripts/: seed_demo_dossier.py
backend/tests/: conftest.py  test_dossier.py  test_eval_evaluator.py  test_eval_finetune.py  test_eval_metrics.py  test_evidence.py  test_fal.py  test_fal_client.py  test_safe_http.py  test_tavily_client.py
backend/tests/fixtures/: eval_synthetic_sample.json  evidence.py
backend/tg/: bot.py
backend/tools/: fal_client.py  gemini_client.py  gliner_client.py  safe_http.py  tavily_client.py  telegram_client.py  unipile_client.py
docs/: hackathon-resource-map.md
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
(+144 files in other folders)
