[project]
name = "huntagent-backend"
version = "0.1.0"
description = "HuntAgent — agentic job search backend (FastAPI)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "starlette>=0.49.1",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic==1.13.1",
    "pydantic-settings==2.2.1",
    "httpx==0.27.0",
    "python-telegram-bot==21.3",
    "google-generativeai==0.7.0",
    "tavily-python==0.3.3",
    "python-dotenv==1.0.1",
    "apscheduler==3.10.4",
]

[tool.uv]
package = false
