[project]
name = "huntagent-backend"
version = "0.1.0"
description = "HuntAgent — agentic job search backend (FastAPI)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "starlette>=0.49.1",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic==1.13.1",
    "pydantic-settings==2.2.1",
    "httpx>=0.27.0",
    "python-telegram-bot>=22.0",
    "google-generativeai==0.7.0",
    "tavily-python==0.3.3",
    "python-dotenv==1.0.1",
    "apscheduler==3.10.4",
]

[dependency-groups]
dev = [
    "asyncpg>=0.31.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.11",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# Enable isort (I) and flake8 (E, F) checks while ignoring line length (E501).
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.uv]
package = false
